--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,16 @@ body {
     background-color: pink
     
 }
+.navbar-default {
+    background: none;
+}
+body {
+   
+   }
 
-
+greatness {
+    width: 200px;
+    height: 200px;
+}
+   
  
