--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,114 @@
-.loader span{
-    display:block;
-    position:absolute;
-    width: 30px;
-    height: 30px;
-    background-color: pink;
-    animation: loaderBlock 1.2s infinite ease-in-out both;
+body {
+    background-color: black;
+    color: silver;
+}
 
+h1{
+    color:palevioletred;
+    text-align: center;
+}
+
+.topnav {
+    background-color: black;
+    overflow: hidden;
+    height: 49px;
+}
+
+.topnav a {
+    float: left;
+    color: silver;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color:palevioletred;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: pink;
+    color: white;
+}
+
+.icons {
+    float: right;
 }
 
 
+.logo {
+    font-size: 4.5vw;
+}
+
+/* The grid: Four equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 25%;
+    padding: 10px;
+
+}
+
+/* Style the images inside the grid */
+.column img {
+    opacity: 0.6; 
+    cursor: pointer; 
+    width: 350px;
+}
+
+.column img:hover {
+    opacity: 1;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* The expanding image container (positioning is needed to position the close button and the text) */
+.container {
+    position: relative;
+    display: none;
+}
+
+/* Expanding image text */
+#imgtext {
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+    color: white;
+    font-size: 20px;
+}
+
+/* Closable button inside the image */
+.closebtn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    color: white;
+    font-size: 35px;
+    cursor: pointer;
+}
+
+* {box-sizing:border-box}
+
+/* Container for skill bars */
+.container {
+    width: 100%; /* Full width */
+    background-color: #ddd; /* Grey background */
+}
+
+.skills {
+    text-align: right; /* Right-align text */
+    padding-right: 20px; /* Add some right padding */
+    line-height: 40px; /* Set the line-height to center the text inside the skill bar, and to expand the height of the container */
+    color: white; /* White text color */
+}
+
+.html {width: 90%; background-color: #4CAF50;} /* Green */
+.css {width: 80%; background-color: #2196F3;} /* Blue */
+.js {width: 65%; background-color: #f44336;} /* Red */
+.php {width: 60%; background-color: #808080;} /* Dark Grey */
