--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,8 @@ body {
     background-color: black;
     color: silver;
     font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    letter-spacing: .1rem;
 }
 
 h1{
@@ -108,10 +110,10 @@ h1{
     text-align: right; /* Right-align text */
     padding-right: 20px; /* Add some right padding */
     line-height: 40px; /* Set the line-height to center the text inside the skill bar, and to expand the height of the container */
-    color: white; /* White text color */
+    color: silver;
 }
 
-.html {width: 90%; background-color: #4CAF50;} /* Green */
+.html {width: 90%; background-color: pink;}
 .css {width: 80%; background-color: #2196F3;} /* Blue */
 .js {width: 65%; background-color: #f44336;} /* Red */
 .php {width: 60%; background-color: #808080;} /* Dark Grey */
