added pic made more pretty in pink

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,35 @@
+body, html {
+    height: 100%;
+}
+
+/* The hero image */
+.hero-image {
+    /* The image used */
+    background-image: url("images/pink.jpg");
+    
+
+    /* Set a specific height */
+    height: 50%;
+
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+
+
 body {
     background-color: black;
     color: silver;
@@ -98,6 +130,7 @@ h1{
     cursor: pointer;
 }
 
+/* Make sure that padding behaves as expected */
 * {box-sizing:border-box}
 
 /* Container for skill bars */
@@ -110,10 +143,10 @@ h1{
     text-align: right; /* Right-align text */
     padding-right: 20px; /* Add some right padding */
     line-height: 40px; /* Set the line-height to center the text inside the skill bar, and to expand the height of the container */
-    color: silver;
+    color: white; /* White text color */
 }
 
-.html {width: 90%; background-color: pink;}
+.html {width: 90%; background-color: #4CAF50;} /* Green */
 .css {width: 80%; background-color: #2196F3;} /* Blue */
 .js {width: 65%; background-color: #f44336;} /* Red */
 .php {width: 60%; background-color: #808080;} /* Dark Grey */
